# omelet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json.EXAMPLE  LICENSE  README.md
omelet/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.EXAMPLE
omelet/cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
omelet/source/: events.cpp  events.hpp  fonts.cpp  fonts.hpp  glsl_program.cpp  glsl_program.hpp  main.cpp  overlays.cpp  overlays.hpp  state.hpp  triangle.cpp  triangle.hpp  utilities.hpp  window.cpp  window.hpp  world.cpp  world.hpp
